# parallax

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  config.example.yaml  pyproject.toml  timsun-assets-snapshot.md
.codex_artifacts/local-macro/: scan.json
.codex_artifacts/timsun-assets/: scan.json
.playwright-mcp/: page-2026-05-04T11-06-37-551Z.yml  page-2026-05-04T11-07-19-327Z.yml  page-2026-05-04T15-25-45-836Z.yml  page-2026-05-04T15-26-53-043Z.yml  page-2026-05-07T23-37-54-921Z.yml  page-2026-05-07T23-47-46-453Z.yml  page-2026-05-07T23-47-56-741Z.yml  page-2026-05-07T23-48-31-591Z.yml  page-2026-05-08T00-16-08-893Z.yml  page-2026-05-08T00-18-05-094Z.yml  page-2026-05-08T00-19-41-100Z.yml  page-2026-05-08T00-20-26-117Z.yml  page-2026-05-09T11-40-25-885Z.yml
deploy/macos/: install_launchd.sh
deploy/nginx/: gmgn-twitter-cli.conf
deploy/systemd/: gmgn-twitter-cli.service
docs/: 2026-05-04-market-observation-timing-production-plan-cn.md  2026-05-04-market-observation-timing-production-spec-cn.md  2026-05-05-frontend-production-audit-cn.md  2026-05-05-selected-token-production-plan-cn.md  2026-05-06-token-identity-resolution-production-audit-cn.md  2026-05-06-token-identity-resolution-production-spec-cn.md  2026-05-06-token-radar-scoring-closure-spec-cn.md  2026-05-07-token-radar-identity-market-v3-production-spec-cn.md  2026-05-07-token-radar-v4-entity-linking-implementation-plan-cn.md  2026-05-07-token-radar-v4-entity-linking-production-spec-cn.md  AGENT_EXECUTION.md  ARCHITECTURE.md  CONTRACTS.md  DESIGN_DISCIPLINE.md  DEVELOPMENT.md  FRONTEND.md  OPERATIONS.md  POSTGRES_PERFORMANCE.md  RELIABILITY.md  SECURITY.md  SETUP.md  TECH_DEBT.md  TESTING.md  WORKERS.md  WORKER_FLOW.md  WORKFLOW.md  token-radar-social-heat-research.md  token-radar-social-heat-spec.md
docs/agent-playbook/: context-packet-template.md  eval-repair-loop.md  factory-operating-model.md  read-model-change-checklist.md  subagent-handoff-template.md  task-examples.md  task-reading-matrix.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/mockups/: intel-cockpit-style.html  token-radar-social-heat-cn.html
docs/prototypes/: closed-loop-harness-cockpit.html  news-trading-desk-static.html  obsidian-desk-v2-static.html  search-intel-page-prototype.html  token-radar-redesign-static.html
docs/references/: BACKEND_ARCHITECTURE_AUDIT_2026-05-16.md  MACRO_TIMSUN_SOURCE_GAP_MAP.md  NEWS_SEARCH.md  POSTGRES_PERFORMANCE.md  README.md  agent-coding-research-2026.md  deepagents-core-design-audit-2026-07-24.md  gmgn-public-protocol.md  news-agent-trading-research-2026-06-18.md  okx-api.md  walkinglabs-harness-engineering.md
docs/reviews/: backend-file-architecture-map-2026-07-21.md  backend-kappa-cqrs-audit-2026-07-13.md  backend-kiss-architecture-audit-zh-2026-07-21.md  backend-kiss-hard-cut-implementation-audit-zh-2026-07-22.md  kappa-cqrs-backend-worker-audit-2026-06-24.md  kappa-cqrs-root-cause-analysis-zh-2026-06-12.md  kappa-cqrs-worker-sql-audit-2026-06-12.md  live-provider-diagnostics-2026-06-24.md  signal-pulse-hard-cut-architecture-audit-zh-2026-07-21.md
docs/sdd/: README.md
ops/postgres/: Dockerfile
scripts/: agent_mode_constraints.py  audit_duplicate_tokens.py  build_agent_context_packet.py  cex_binance_config_hard_cut.py  check_macro_research_publication.py  check_sdd_gate.py  dispatch_sdd_task.py  evaluate_pulse_1h_4h_policy.py  evaluate_signal_pulse_agent_cost_guard.py  migrate_tests_layout.py  pgbadger_report.sh  powa_configure.sh  regen_agent_work_index.py  regen_backend_architecture_ledger.py  regen_cli_help.py  regen_db_schema.py  regen_openapi.py  regen_pulse_agent_desk_decisions.py  regen_score_versions.py  regen_sdd_work_index.py  regen_ws_protocol.py  runtime_performance_root_fix_check.sh  smoke_okx_ws.py  subagent_report_contract.py  validate_sdd_artifacts.py  validate_subagent_report.py
scripts/audit_dedup/: __init__.py  candidates.py  external_arbiter.py  phase1_chain_normalize.py  phase2_dedup.py  report.py  winner.py
src/gmgn_twitter_cli/: __init__.py  cli.py  logging_setup.py  runtime_paths.py  service_control.py  settings.py
src/gmgn_twitter_intel/: __init__.py  cli.py  models.py  runtime_paths.py  settings.py
src/tracefold/: cli.py
tests/: conftest.py  factories.py  factories_token_radar.py  factories_token_radar_v3.py  notification_helpers.py  postgres_observability_container.py  postgres_test_utils.py  runtime_settings.py  test_account_quality_repository.py  test_account_quality_service.py  test_api_health.py  test_api_http.py  test_api_static.py  test_api_websocket.py  test_asset_flow_service.py  test_asset_identity_policy.py  test_asset_ingest_flow.py  test_asset_market_stream_worker.py  test_asset_market_sync.py  test_asset_mention_builder.py  test_asset_posts_service.py  test_asset_repository.py  test_asset_resolution_worker.py  test_asset_resolver.py  test_asset_search_service.py  test_asset_social_timeline_service.py  test_atomic_mention.py  test_baseline_scoring.py  test_business_algorithms.py  test_cli.py  test_collector_service.py  test_compose_healthcheck.py  test_compose_postgres.py  test_cross_section_normalizer.py  test_current_market_repository.py  test_deterministic_token_resolver.py  test_diffusion_health.py  test_direct_ws.py  test_discovery_and_lookup_repositories.py  test_discussion_quality_scoring.py  (+116 more)
tests/architecture/: conftest.py  test_agent_execution_plane_contracts.py  test_agent_harness_cleanup_contracts.py  test_agent_input_identity_contracts.py  test_agent_model_capability_contracts.py  test_agent_playbook_contracts.py  test_api_read_paths_provider_free.py  test_backend_boundaries.py  test_cex_oi_kappa_contract.py  test_completion_gates.py  test_dirty_queue_attempt_budget_contract.py  test_docs_surface.py  (+43 more)
tools/: factor_baseline_diff.py
web/: .prettierignore  .prettierrc.json  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+3602 files in other folders)
