[project]
name = "gmgn-twitter-intel"
version = "0.1.0"
description = "Evidence-first GMGN Twitter intelligence service with PostgreSQL-backed entity and signal retrieval."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "apprise>=1.10.0",
    "curl-cffi>=0.7.0",
    "eth-hash[pycryptodome]>=0.8.0",
    "eth-utils>=5.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "openai>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.3",
    "solders>=0.26.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
gmgn-twitter-intel = "gmgn_twitter_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmgn_twitter_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
